MacViews: Change insertTextInternal to correctly handle IME character input.

This CL fixes a regression caused in r400918 which modified the insertText
handlers to use the current key down event instead of the passed |text| argument
for character text insertion. While this works correctly for regular text, this
is not correct for text inserted using an IME. This is because when the current
composition text is confirmed, say by pressing the Return key, |keyDownEvent_|
will correspond to the return key press event. Hence [keyDownEvent_ characters]
will not contain the text to be inserted.

This CL corrects the insertTextInternal function to use |text| instead of
|keyDownEvent_| to generate the synthetic ui::KeyEvent for character insertion,
hence fixing the bug.

BUG=630980

Review-Url: https://codereview.chromium.org/2180873002
Cr-Commit-Position: refs/heads/master@{#408374}

Former-commit-id: f955be13bc49601dc963dcc7e2182ef792b600f9